@@ -1,3 +1,4 @@
+210627 change __pycache__ location
 210625 optimal graph tuning
 210610 optimal graph
 210610 determ mcts (over-estimated) done
